import 'package:flutter/material.dart';
import 'package:tech_knowl_edge_connect/data/concepts/index.dart';
import 'package:tech_knowl_edge_connect/models/unit.dart';

List<Unit> computerUnits = [
  Unit(
      name: "Komponenten",
      concepts:
          conceptMap["Informatik"]!["Hardware"]!["Computer"]!["Komponenten"]!,
      iconData: Icons.view_quilt),
];
